--- a/app/users/webapp/manifest.json
+++ b/app/users/webapp/manifest.json
@@ -123,7 +123,17 @@
                     "options": {
                         "settings": {
                             "editableHeaderContent": false,
-                            "entitySet": "Users"
+                            "entitySet": "Users",
+                            "controlConfiguration": {
+                                "@com.sap.vocabularies.UI.v1.FieldGroup#GeneratedGroup1": {
+                                    "fields": {
+                                        "Countries": {
+                                            "label": "Countrieesssss",
+                                            "template": "users.test"
+                                        }
+                                    }
+                                }
+                            }
                         }
                     }
                 }
